Secret.yml
apiVersion: v1
kind: Secret
metadata:
  name: app-Secret
data:
  DB_HOST: mysql
  DB_USER: root
  DB_PASSWORD: passwd

echo -n 'mysql' | base64

apiVersion: v1 
kind: Pod 
metadata:
  labels:
    name: webapp-pod
  name: webapp-pod
  namespace: default 
spec:
  containers:
  - image: kodekloud/simple-webapp-mysql
    imagePullPolicy: Always
    name: webapp
