commands.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-Pod
spec:
  containers:
  - name: nginx-cotainer
    image: nginx
    command: ["sleep 2.0"]
    args: ["10"]
