enffromconfigmap.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-Pod
spec:
  containers:
  - name: nginx-cotainer
    image: nginx
