nodeSelector.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-Pod
spec:
  containers:
  - name: nginx-container
    image: nginx
  nodeSelector:
    size: Large
