pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mywebsite-pod
  labels:
    app: mywebsite
    type: static
spec:
  containers:
    - name: mywebsite-container
      image: dhruvin30/dhsoniweb
