tolerations.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-Pod
spec:
  containers:
  - name: nginx-container
     image: nginx
  tolerations:
  - key: "app"
    operator: "Equal"
    value: "blue"
    effect: "NoSchedule"
