NodePort-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service

spec:
  type: NodePort
  ports:
  - targetPort: 80
    port: 80
    NodePort: 30080
  selector:
    app: myapp
    type: front-end
