NetworkPolicyEgress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metdata: 
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-pod
      namespaceSelector:
        matcLabels:
          name: prod
    - ipBlock:
          cide: 192.168.5.10/32
    ports:
    - protocol: TCP
      port: 3306
  egress:
  - to:
    - ipBlock:
          cide: 192.168.5.11/32
    ports:
    - protocol: TCP
      port: 80
